--- a/views/updatePost.ejs
+++ b/views/updatePost.ejs
@@ -11,7 +11,7 @@
       <h3>Content</h3>
       <textarea class="form-control" name="postContent" cols="40" rows="5"><%=content%></textarea>
     </div>
-    <input type="text" name="_id" value="<%=id %>">
+    <!--<input type="text" name="_id" value="<%=id %>">-->
     <button type="submit" class="btn btn-info" name="update">Update Post</button>
     <!--<button type="reset" name="cancel" class="btn btn-danger">Delete Post</button>-->
   </form>
